# ogdf-builds

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml  setup.cfg  setup.py
.github/workflows/: wheels.yml
