[build-system]
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake_build_extension"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = [
# Linux
    "cp36-manylinux_x86_64",
    "cp36-manylinux_i686 ",
    "cp36-manylinux_aarch64",
    "cp36-manylinux_ppc64le",
    "cp36-manylinux_s390x",
    "pp37-manylinux_x86_64",
# Mac OS X
    "cp36-macosx_x86_64 ",
    "cp38-macosx_universal2",
    "cp38-macosx_arm64",
    "pp37-macosx_x86_64 ",
# Windows
    "cp36-win_amd64",
    "cp36-win32 ",
    "pp37-win_amd64 ",
]