[metadata]
name = ogdf-builds
description = Pre-compiled builds of the OGDF library, packaged for Python
long_description = file: README.md
long_description_content_type = text/markdown
author = Simon D. Fink
author_email = finksim@fim.uni-passau.de
license = Apache-2.0
platforms = any

[options]
zip_safe = False
